# membrane-invitations-zome

./: 404.html  README.md  flake.nix  hashmap.json  index.html  introduction.html  membrane-invitations-store.html  package.json  pnpm-lock.yaml  setup.html
.github/workflows/: build-and-cache-zomes.yaml  test.yaml
assets/: app.DTpNOuix.js  app.n3t6vwR4.js  index.md.Dn3XEuFH.js  introduction.md.DCyUU0je.js  membrane-invitations-store.md.BJZW1jFk.js  membrane-invitations-store.md.BJZW1jFk.lean.js  public_backend_doc_static.files_SourceSerif4-LICENSE-3bb119e13b1258b7.md.Ic9YUJi9.js  public_backend_doc_static.files_SourceSerif4-LICENSE-3bb119e13b1258b7.md.Ic9YUJi9.lean.js  public_backend_doc_static.files_SourceSerif4-LICENSE-a2cfd9d5.md.DfpwqFAq.js  public_backend_doc_static.files_SourceSerif4-LICENSE-a2cfd9d5.md.DfpwqFAq.lean.js  setup.md.DqeS0P-D.js  setup.md.DqeS0P-D.lean.js  style.KHL1TaGQ.css
assets/chunks/: @localSearchIndexroot.B4hj7HLa.js  @localSearchIndexroot.BKtec_Az.js  VPLocalSearchBox.BMlRX2Dq.js  VPLocalSearchBox.BUeoM_G4.js  arc.-khGe9Zv.js  arc.D0TvQbUi.js  architectureDiagram-IEHRJDOE.BzDAOwlH.js  architectureDiagram-IEHRJDOE.Dqz-O2Jn.js  (+77 more)
backend/: .rustc_info.json
docs/: index.md  introduction.md  membrane-invitations-store.md  package.json  setup.md
tests/: package.json
ui/: custom-elements.json  package.json
workdir/: dna.nix  dna.yaml  happ.nix  happ.yaml
zomes/coordinator/membrane_invitations/: Cargo.toml  zome.nix
zomes/coordinator/membrane_invitations/src/: lib.rs
zomes/integrity/membrane_invitations/: Cargo.toml  zome.nix
(+85 files in other folders)
