[package]
name = "membrane_invitations"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "membrane_invitations"

[dependencies]
hdk = { workspace = true }

holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }

membrane_invitations_integrity = { path = "../../integrity/membrane_invitations", package = "membrane_invitations_integrity" }

private_event_sourcing = { git = "https://github.com/darksoil-studio/private-event-sourcing-zome", branch = "main-0.5" } 
