[package]
name = "membrane_invitations_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "membrane_invitations_integrity"

[dependencies]
hdi = { workspace = true }

holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }

private_event_sourcing_integrity = { git = "https://github.com/darksoil-studio/private-event-sourcing-zome", branch = "main-0.5" } 
